--- a/public/contact.html
+++ b/public/contact.html
@@ -4,85 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Netra Jyoti Eye Clinic</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-        :root {
-            --primary-color: #005A9C;
-            --secondary-color: #00A89D;
-            --accent-color: #F7941D;
-            --text-color: #333333;
-            --light-gray: #f4f7f6;
-            --white: #ffffff;
-            --shadow: 0 10px 30px rgba(0, 90, 156, 0.1);
-            --border-radius: 12px;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Poppins', sans-serif; color: var(--text-color); background-color: var(--white); line-height: 1.7; }
-        .container { width: 90%; max-width: 1200px; margin: 0 auto; }
-
-        /* Header & Navigation */
-        .main-header { position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; background-color: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); padding: 1rem 0; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05); }
-        .main-nav { display: flex; justify-content: space-between; align-items: center; height: 60px; }
-        .logo { font-size: 1.8rem; font-weight: 700; color: var(--primary-color); text-decoration: none; }
-        .logo span { color: var(--secondary-color); }
-        .nav-links { list-style: none; display: flex; gap: 2rem; }
-        .nav-links a { text-decoration: none; color: var(--text-color); font-weight: 500; position: relative; transition: color 0.3s ease; }
-        .nav-links a::after { content: ''; position: absolute; bottom: -5px; left: 0; width: 0; height: 2px; background-color: var(--secondary-color); transition: width 0.3s ease; }
-        .nav-links a:hover, .nav-links a.active { color: var(--primary-color); }
-        .nav-links a:hover::after, .nav-links a.active::after { width: 100%; }
-        .cta-button { background-color: var(--accent-color); color: var(--white); padding: 0.75rem 1.5rem; border-radius: 50px; text-decoration: none; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(247, 148, 29, 0.3); }
-        .cta-button:hover { transform: translateY(-3px); box-shadow: 0 6px 20px rgba(247, 148, 29, 0.4); }
-        .mobile-menu-toggle { display: none; font-size: 2rem; cursor: pointer; color: var(--primary-color); }
-        
-        /* Page Header */
-        .page-header { padding: 150px 0 80px 0; background: linear-gradient(to right, var(--primary-color), var(--secondary-color)); text-align: center; color: var(--white); }
-        .page-header h1 { font-size: 3rem; font-weight: 700; }
-        .page-header p { font-size: 1.1rem; opacity: 0.9; }
-
-        /* Contact Section */
-        .section { padding: 80px 0; }
-        .contact-wrapper { display: grid; grid-template-columns: 1fr 1.2fr; gap: 60px; align-items: flex-start; }
-        
-        .contact-info { background-color: var(--light-gray); padding: 40px; border-radius: var(--border-radius); }
-        .contact-info h3 { font-size: 1.8rem; color: var(--primary-color); margin-bottom: 2rem; }
-        .info-item { display: flex; align-items: flex-start; gap: 20px; margin-bottom: 1.5rem; }
-        .info-item .icon { font-size: 1.5rem; color: var(--secondary-color); margin-top: 5px; }
-        .info-item h4 { font-size: 1.1rem; margin-bottom: 0.25rem; color: var(--primary-color); }
-        .info-item p { margin: 0; }
-
-        .contact-form-container { background: var(--white); padding: 40px; border-radius: var(--border-radius); box-shadow: var(--shadow); }
-        .contact-form-container h3 { font-size: 1.8rem; color: var(--primary-color); margin-bottom: 2rem; }
-        .form-group { margin-bottom: 1.5rem; }
-        .form-group label { display: block; margin-bottom: 0.5rem; font-weight: 500; }
-        .form-group input, .form-group textarea { width: 100%; padding: 12px 15px; border: 1px solid #ddd; border-radius: 8px; font-family: 'Poppins', sans-serif; transition: border-color 0.3s ease; }
-        .form-group input:focus, .form-group textarea:focus { outline: none; border-color: var(--primary-color); box-shadow: 0 0 0 3px rgba(0, 90, 156, 0.1); }
-        .form-group textarea { resize: vertical; min-height: 120px; }
-        .form-submit-btn { width: 100%; padding: 15px; border: none; border-radius: 8px; background-color: var(--accent-color); color: var(--white); font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: all 0.3s ease; }
-        .form-submit-btn:hover { background-color: #e68a0d; transform: translateY(-2px); }
-
-        .map-container { margin-top: 80px; }
-        .map-container iframe { width: 100%; height: 450px; border: 0; border-radius: var(--border-radius); }
-
-        /* Footer */
-        .main-footer { background-color: var(--primary-color); color: var(--white); padding: 60px 0 20px 0; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; margin-bottom: 40px; }
-        .footer-col h4 { font-size: 1.2rem; margin-bottom: 1.5rem; color: var(--accent-color); }
-        .footer-col p, .footer-col ul, .footer-col a { color: rgba(255, 255, 255, 0.8); text-decoration: none; font-size: 0.95rem; }
-        .footer-col ul { list-style: none; } .footer-col ul li { margin-bottom: 0.75rem; }
-        .footer-col ul a:hover { color: var(--white); padding-left: 5px; transition: all 0.3s ease; }
-
-        /* Responsive */
-        @media (max-width: 992px) {
-            .nav-links { display: none; flex-direction: column; position: absolute; top: 80px; left: 0; width: 100%; background-color: var(--white); padding: 2rem 0; box-shadow: 0 10px 20px rgba(0,0,0,0.1); text-align: center; }
-            .nav-links.active { display: flex; }
-            .mobile-menu-toggle { display: block; }
-            .cta-button-nav { display: none; }
-            .contact-wrapper { grid-template-columns: 1fr; }
-        }
-        @media (max-width: 768px) { .page-header h1 { font-size: 2.5rem; } }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -116,28 +38,32 @@
                     <div class="contact-info">
                         <h3>Clinic Information</h3>
                         <div class="info-item">
-                            <span class="icon">📍</span>
+                            <span class="icon">
+                                &#128205;</span>
                             <div>
                                 <h4>Address</h4>
                                 <p>123 Vision Avenue, Med-City,<br>New Delhi, 110001, India</p>
                             </div>
                         </div>
                         <div class="info-item">
-                            <span class="icon">📞</span>
+                            <span class="icon">
+                                &#128222;</span>
                             <div>
                                 <h4>Phone</h4>
                                 <p>+91 98765 43210</p>
                             </div>
                         </div>
                         <div class="info-item">
-                            <span class="icon">✉️</span>
+                            <span class="icon">
+                                &#9993;&#65039;</span>
                             <div>
                                 <h4>Email</h4>
                                 <p>info@netrajyoti.in</p>
                             </div>
                         </div>
                         <div class="info-item">
-                            <span class="icon">🕒</span>
+                            <span class="icon">
+                                &#128338;</span>
                             <div>
                                 <h4>Operating Hours</h4>
                                 <p>Mon - Sat: 9:00 AM - 7:00 PM<br>Sunday: Closed</p>
@@ -146,7 +72,7 @@
                     </div>
                     <div class="contact-form-container">
                         <h3>Send Us a Message</h3>
-                        <form action="#" method="POST">
+                        <form action="/api/contact" method="POST">
                             <div class="form-group">
                                 <label for="name">Full Name</label>
                                 <input type="text" id="name" name="name" required>
@@ -168,7 +94,7 @@
                     </div>
                 </div>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224345.83923192244!2d77.0688975475273!3d28.52758200617636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x52c2b7494e204dce!2sNew%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1700000000000" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224345.83923192244!2d77.0688975475273!3d28.52758200617636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x52c2b7494e204dce!2sNew%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1622621814161" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -177,20 +103,41 @@
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
-                <div class="footer-col"><h4>Netra Jyoti Clinic</h4><p>Your vision, our mission.</p></div>
-                <div class="footer-col"><h4>Quick Links</h4><ul><li><a href="index.html">Home</a></li><li><a href="services.html">Services</a></li><li><a href="doctors.html">Our Doctors</a></li><li><a href="booking.html">Book Appointment</a></li></ul></div>
-                <div class="footer-col"><h4>Contact Info</h4><p>123 Vision Avenue, New Delhi</p><p>+91 98765 43210</p><p>info@netrajyoti.in</p></div>
+                <div class="footer-col">
+                    <h4>Netra Jyoti Clinic</h4>
+                    <p>Your vision, our mission. Providing world-class eye care services in the heart of India.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="doctors.html">Our Doctors</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="booking.html">Book Appointment</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact Info</h4>
+                    <p>123 Vision Avenue, Med-City, <br>New Delhi, 110001, India</p>
+                    <p>Phone: +91 98765 43210</p>
+                    <p>Email: info@netrajyoti.in</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                    <div class="social-icons">
+                        <a href="#" aria-label="Facebook" title="Facebook">&#x24BB;</a>
+                        <a href="#" aria-label="Twitter" title="Twitter">&#x24C9;</a>
+                        <a href="#" aria-label="Instagram" title="Instagram">&#x24BE;</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-bottom"><p>&copy; 2024 Netra Jyoti Eye Clinic. All Rights Reserved.</p></div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Netra Jyoti Eye Clinic. All Rights Reserved. Designed for prototype purposes.</p>
+            </div>
         </div>
     </footer>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
-            const navLinks = document.getElementById('nav-links');
-            mobileMenuToggle.addEventListener('click', () => navLinks.classList.toggle('active'));
-        });
-    </script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
