--- a/public/doctors.html
+++ b/public/doctors.html
@@ -35,53 +35,7 @@
         <section class="section">
             <div class="container">
                 <div class="team-grid">
-                    <div class="doctor-profile-card">
-                        <div class="card-header">
-                            <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?q=80&w=2864&auto=format&fit=crop" alt="Dr. Anjali Sharma">
-                        </div>
-                        <div class="card-body">
-                            <h3>Dr. Anjali Sharma</h3>
-                            <p class="specialty">Cataract & Refractive Surgeon</p>
-                            <p class="bio">With over 15 years of experience, Dr. Sharma is a pioneer in advanced cataract surgery and LASIK procedures. She is known for her precision and patient-centric care.</p>
-                            <a href="booking.html" class="cta-button">Book with Dr. Sharma</a>
-                        </div>
-                    </div>
-
-                    <div class="doctor-profile-card">
-                        <div class="card-header">
-                            <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?q=80&w=2940&auto=format&fit=crop" alt="Dr. Rohan Verma">
-                        </div>
-                        <div class="card-body">
-                            <h3>Dr. Rohan Verma</h3>
-                            <p class="specialty">Glaucoma & Cornea Specialist</p>
-                            <p class="bio">Dr. Verma is a leading expert in the management of complex glaucoma cases and corneal diseases. He is dedicated to preserving vision through early diagnosis and treatment.</p>
-                            <a href="booking.html" class="cta-button">Book with Dr. Verma</a>
-                        </div>
-                    </div>
-
-                    <div class="doctor-profile-card">
-                        <div class="card-header">
-                            <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?q=80&w=2940&auto=format&fit=crop" alt="Dr. Priya Desai">
-                        </div>
-                        <div class="card-body">
-                            <h3>Dr. Priya Desai</h3>
-                            <p class="specialty">Pediatric Ophthalmologist</p>
-                            <p class="bio">Dr. Desai brings a gentle and playful approach to pediatric eye care. She excels in treating childhood eye conditions and making young patients feel at ease.</p>
-                            <a href="booking.html" class="cta-button">Book with Dr. Desai</a>
-                        </div>
-                    </div>
-                    
-                    <div class="doctor-profile-card">
-                        <div class="card-header">
-                            <img src="https://images.unsplash.com/photo-1537368910025-700350796527?q=80&w=2874&auto=format&fit=crop" alt="Dr. Vikram Singh">
-                        </div>
-                        <div class="card-body">
-                            <h3>Dr. Vikram Singh</h3>
-                            <p class="specialty">Retina & Uvea Specialist</p>
-                            <p class="bio">Dr. Singh specializes in diseases of the retina and uvea, including diabetic retinopathy and macular degeneration. He utilizes the latest imaging and treatment technologies.</p>
-                            <a href="booking.html" class="cta-button">Book with Dr. Singh</a>
-                        </div>
-                    </div>
+                    <!-- Doctor profile cards will be dynamically loaded here by JavaScript -->
                 </div>
             </div>
         </section>
