--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" style="background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('https://images.unsplash.com/photo-1600375406109-705306095000?q=80&w=2832&auto=format&fit=crop');">
             <div class="container hero-content">
                 <h1>Vision for a Brighter Tomorrow</h1>
                 <p>Experience world-class eye care with a compassionate touch. Netra Jyoti Clinic is dedicated to protecting and perfecting your vision.</p>
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="about-grid">
                     <div class="about-image-container">
-                        <img src="https://images.unsplash.com/photo-1631217872959-3985d75145a2?q=80&w=2864&auto=format&fit=crop" alt="Modern clinic reception" class="about-image">
+                        <img src="https://images.unsplash.com/photo-1620909460298-68fe2565b70e?q=80&w=2820&auto=format&fit=crop" alt="Modern clinic interior with Indian art" class="about-image">
                     </div>
                     <div class="about-content">
                         <h3>Welcome to Netra Jyoti Clinic</h3>
@@ -94,27 +94,7 @@
                     <p>Our team of dedicated and experienced ophthalmologists is here to serve you.</p>
                 </div>
                 <div class="doctors-grid">
-                    <div class="doctor-card">
-                        <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?q=80&w=2864&auto=format&fit=crop" alt="Dr. Anjali Sharma">
-                        <div class="doctor-info">
-                            <h3>Dr. Anjali Sharma</h3>
-                            <p>Cataract & Refractive Surgeon</p>
-                        </div>
-                    </div>
-                    <div class="doctor-card">
-                        <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?q=80&w=2940&auto=format&fit=crop" alt="Dr. Rohan Verma">
-                        <div class="doctor-info">
-                            <h3>Dr. Rohan Verma</h3>
-                            <p>Glaucoma & Cornea Specialist</p>
-                        </div>
-                    </div>
-                    <div class="doctor-card">
-                        <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?q=80&w=2940&auto=format&fit=crop" alt="Dr. Priya Desai">
-                        <div class="doctor-info">
-                            <h3>Dr. Priya Desai</h3>
-                            <p>Pediatric Ophthalmologist</p>
-                        </div>
-                    </div>
+                    <!-- Doctor cards will be dynamically loaded here by JavaScript -->
                 </div>
                  <div style="text-align: center; margin-top: 40px;">
                     <a href="doctors.html" class="cta-button">View All Doctors</a>
@@ -131,7 +111,7 @@
                     <p>
                         &#8220;The care I received at Netra Jyoti was exceptional. The doctors are not only experts but also incredibly compassionate. My vision has never been better. I wholeheartedly recommend this clinic to everyone.&#8221;</p>
                     <div class="testimonial-author">
-                        <img src="https://images.unsplash.com/photo-1593104547489-5cfb3839a3b5?q=80&w=2940&auto=format&fit=crop" alt="Rina Patel">
+                        <img src="https://images.unsplash.com/photo-1542841928-ae6897c5cb43?q=80&w=2787&auto=format&fit=crop" alt="Satisfied Patient - Rina Patel">
                         <div class="author-info">
                             <h4>Rina Patel</h4>
                             <p>Mumbai, Maharashtra</p>
