--- a/public/services.html
+++ b/public/services.html
@@ -37,7 +37,7 @@
                 <div class="service-detail-card">
                     <div class="service-item">
                         <div class="service-image-container">
-                             <img src="https://images.unsplash.com/photo-1550355191-aa7583f09f1a?q=80&w=2864&auto=format&fit=crop" alt="Cataract Surgery" class="service-image">
+                             <img src="https://images.unsplash.com/photo-1631217872959-3985d75145a2?q=80&w=2864&auto=format&fit=crop" alt="Cataract Surgery Procedure" class="service-image">
                         </div>
                         <div class="service-content">
                             <h3>Cataract Surgery</h3>
@@ -48,7 +48,7 @@
 
                     <div class="service-item">
                         <div class="service-image-container">
-                            <img src="https://images.unsplash.com/photo-1606318801933-81e3347f3358?q=80&w=2835&auto=format&fit=crop" alt="LASIK & Refractive Surgery" class="service-image">
+                            <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?q=80&w=2940&auto=format&fit=crop" alt="LASIK Eye Surgery Equipment" class="service-image">
                         </div>
                         <div class="service-content">
                             <h3>LASIK & Refractive Surgery</h3>
@@ -59,7 +59,7 @@
 
                     <div class="service-item">
                         <div class="service-image-container">
-                             <img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?q=80&w=2787&auto=format&fit=crop" alt="Pediatric Ophthalmology" class="service-image">
+                             <img src="https://images.unsplash.com/photo-1559599550-9bad3423988a?q=80&w=2940&auto=format&fit=crop" alt="Child Receiving Pediatric Eye Exam" class="service-image">
                         </div>
                         <div class="service-content">
                             <h3>Pediatric Ophthalmology</h3>
@@ -70,7 +70,7 @@
 
                     <div class="service-item">
                         <div class="service-image-container">
-                            <img src="https://images.unsplash.com/photo-1629433303833-95d4d1a49c2f?q=80&w=2835&auto=format&fit=crop" alt="Glaucoma Management" class="service-image">
+                            <img src="https://images.unsplash.com/photo-1516574187841-cb9cc2ca948b?q=80&w=2940&auto=format&fit=crop" alt="Glaucoma Eye Test" class="service-image">
                         </div>
                         <div class="service-content">
                             <h3>Glaucoma Management</h3>
